gitea/postgres.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: gitea
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      namespace: gitea
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:9.6
        name: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: postgres-volume
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-task-claim
