gitea/gitea-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: gitea
