gitea/postgres-service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: gitea
  name: postgres
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  selector:
    app: postgres
