gitea/gitea-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: gitea
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:

  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  selector:
    app: gitea
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
spec:
  serviceName: "gitea"
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-task-claim
      containers:
        - image: gitea/gitea:1.13.1
          name: gitea
          ports:
            - containerPort: 3000
            - containerPort: 222
              protocol: TCP
          volumeMounts:
            - mountPath: "/test"
              name: postgres-volume
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  replicas: 1
  serviceName: "postgres"
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:

      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-task-claim
      containers:
        - image: postgres:9.6
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: postgres-volume
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-service-ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea
            port:
              number: 3000
      - path: /db
        pathType: Prefix
        backend:
          service:
            name: postgres
            port:
              number: 5432
