gitea/ingres.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-service-ingress
  namespace: gitea
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea
            port:
              number: 3000
      - path: /db
        pathType: Prefix
        backend:
          service:
            name: postgres
            port:
              number: 5432
